[gd_scene load_steps=11 format=3 uid="uid://dpa7i0bdffddr"]

[ext_resource type="Script" path="res://addons/custom_polygon_tool/scripts/cpt_curve2d.gd" id="1_1c4gi"]
[ext_resource type="Script" path="res://addons/custom_polygon_tool/scripts/ctp_craft.gd" id="2_eebrc"]
[ext_resource type="Shader" path="res://addons/custom_polygon_tool/materials/cpt_inner.gdshader" id="3_smqv2"]
[ext_resource type="Texture2D" uid="uid://fskijh8nsb3a" path="res://addons/custom_polygon_tool/samplers/cpt_inner_custom.bmp" id="4_63iyt"]
[ext_resource type="Texture2D" uid="uid://cuhpju61w88bq" path="res://addons/custom_polygon_tool/samplers/fractal_gradient_2d.tres" id="5_4tsv6"]
[ext_resource type="Shader" path="res://addons/custom_polygon_tool/materials/cpt_line.gdshader" id="6_y2ax8"]

[sub_resource type="Curve2D" id="Curve2D_83jc8"]
_data = {
"points": PackedVector2Array(0, 0, 123.817, 39.685, 1.53076e-14, -250, 111.118, -46.0346, -230.173, -211.124, 216.506, 125, 187.313, -241.285, -541.304, -169.852, -216.506, 125, -53.9716, -42.8598, 0, 0, -4.59227e-14, -250)
}
point_count = 4
script = ExtResource("1_1c4gi")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_rjq08"]
shader = ExtResource("3_smqv2")
shader_parameter/p_c_f_d = 0.66
shader_parameter/uv_local_global = 1.0
shader_parameter/p_use_sdf = 1.0
shader_parameter/p_sdf_aim = 500.0
shader_parameter/p_tex_tiling = 1.0
shader_parameter/p_tex_size = Vector2(1024, 1024)
shader_parameter/p_sdf_color = null
shader_parameter/p_main_sampler = ExtResource("4_63iyt")
shader_parameter/c_use_back_buffer = 1.0
shader_parameter/c_use_sdf = 1.0
shader_parameter/c_sdf_aim = 500.0
shader_parameter/c_sdf_color = null
shader_parameter/c_tex_tiling = 1.0
shader_parameter/c_tex_size = Vector2(1024, 1024)
shader_parameter/c_main_splats_color = Color(0, 0, 0, 1)
shader_parameter/c_main_sampler = ExtResource("4_63iyt")
shader_parameter/f_sdf_aim = 150.0
shader_parameter/f_color_sampler = ExtResource("5_4tsv6")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_gylnw"]
shader = ExtResource("6_y2ax8")

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_0yqsg"]
polygon = PackedVector2Array(1.53076e-14, -250, 2.91643, -249.024, 14.8525, -244.236, 17.8984, -242.825, 33.4432, -234.552, 39.7871, -230.701, 59.1332, -217.441, 68.9271, -209.92, 91.8821, -190.322, 104.948, -177.982, 133.768, -147.727, 149.196, -129.727, 175.372, -95.8617, 188.777, -76.5463, 208.107, -45.4346, 216.639, -29.9749, 229.481, -3.41858, 232.617, 3.99752, 240.468, 25.6195, 241.538, 29.117, 245.795, 46.065, 246.42, 49.3368, 248.129, 61.9846, 248.352, 65.0295, 248.517, 73.8613, 248.399, 76.6994, 247.511, 84.8767, 247.034, 87.4855, 245.799, 92.5189, 245.04, 94.9407, 242.181, 101.81, 239.78, 106.045, 236.971, 109.992, 233.747, 113.638, 230.097, 116.974, 228.11, 118.521, 226.013, 119.987, 223.805, 121.369, 219.053, 123.877, 216.506, 125, 213.819, 122.534, 27.7374, -31.3993, 24.8547, -32.8289, 10.7858, -38.7875, 8.03316, -39.7395, -2.81051, -42.7398, -5.48523, -43.2866, -13.4402, -44.4354, -16.0724, -44.6535, -23.9266, -44.8097, -26.5341, -44.6949, -34.3405, -43.8462, -36.9409, -43.3943, -44.7526, -41.5283, -47.3637, -40.7352, -55.2338, -37.8394, -57.8732, -36.701, -65.8548, -32.7629, -71.2398, -29.6992, -79.4353, -24.4408, -87.7991, -18.3811, -99.2639, -9.04259, -111.152, 1.74973, -129.931, 20.7004, -153.562, 47.0654, -214.319, 122.185, -216.506, 125, -219.664, 124.004, -299.214, 94.4125, -301.556, 93.3704, -344.889, 71.2163, -348.45, 69.0826, -370.732, 54.0533, -373.546, 51.8946, -386.274, 41.0653, -388.557, 38.8933, -396.831, 30.1892, -398.689, 28.0098, -405.3, 19.2826, -406.751, 17.0991, -410.629, 10.5465, -412.827, 6.1778, -414.72, 1.81, -416.315, -2.5558, -417.616, -6.91854, -418.629, -11.2772, -419.36, -15.6307, -419.814, -19.9779, -419.996, -24.3179, -419.912, -28.6495, -419.567, -32.9718, -418.967, -37.2836, -418.117, -41.584, -417.022, -45.8717, -415.688, -50.1459, -414.12, -54.4054, -410.306, -62.8761, -408.07, -67.0853, -402.967, -75.4459, -400.111, -79.5952, -392.126, -89.8697, -388.609, -93.9373, -377.018, -105.981, -370.672, -111.907, -354.562, -125.462, -342.041, -134.89, -320.485, -149.488, -297.359, -163.43, -266.771, -179.831, -231.725, -196.407, -189.615, -213.784, -148.168, -228.49, -108.874, -240.234, -78.4097, -247.644, -56.0535, -251.852, -42.6984, -253.678, -30.7532, -254.689, -23.6454, -254.895, -17.2727, -254.718, -14.3755, -254.482, -6.90592, -253.177, -2.99867, -251.797, -4.59227e-14, -250)

[node name="AnimatableBody2DDemo" type="AnimatableBody2D"]

[node name="You can give him a custom script" type="Node" parent="."]

[node name="Only instantiate one CPT_Craft per body" type="Node" parent="."]

[node name="Here are his body parts" type="Node" parent="."]

[node name="Change their properties to your needs" type="Node" parent="."]

[node name="CPT_Craft will alter the shape + materials" type="Node" parent="."]

[node name="CPT_Craft" type="Path2D" parent="."]
position = Vector2(582, 320)
curve = SubResource("Curve2D_83jc8")
script = ExtResource("2_eebrc")
inner_material = SubResource("ShaderMaterial_rjq08")
poly_radius = 250.0
poly_number_of_points = 3
free_custom_bake_interval = 75.0
free_angle_threshold = 0.05
debug_show_collision_polygone = false
debug_points_radius = 7.0
debug_points_color = Array[Color]([Color(1, 0.388235, 0.278431, 1), Color(1, 0.647059, 0, 1)])
line_material = SubResource("ShaderMaterial_gylnw")

[node name="CPT_Polygon" type="Polygon2D" parent="."]
z_index = 1
texture_repeat = 2
material = SubResource("ShaderMaterial_rjq08")
position = Vector2(582, 320)
polygon = PackedVector2Array(1.53076e-14, -250, 2.91643, -249.024, 14.8525, -244.236, 17.8984, -242.825, 33.4432, -234.552, 39.7871, -230.701, 59.1332, -217.441, 68.9271, -209.92, 91.8821, -190.322, 104.948, -177.982, 133.768, -147.727, 149.196, -129.727, 175.372, -95.8617, 188.777, -76.5463, 208.107, -45.4346, 216.639, -29.9749, 229.481, -3.41858, 232.617, 3.99752, 240.468, 25.6195, 241.538, 29.117, 245.795, 46.065, 246.42, 49.3368, 248.129, 61.9846, 248.352, 65.0295, 248.517, 73.8613, 248.399, 76.6994, 247.511, 84.8767, 247.034, 87.4855, 245.799, 92.5189, 245.04, 94.9407, 242.181, 101.81, 239.78, 106.045, 236.971, 109.992, 233.747, 113.638, 230.097, 116.974, 228.11, 118.521, 226.013, 119.987, 223.805, 121.369, 219.053, 123.877, 216.506, 125, 213.819, 122.534, 27.7374, -31.3993, 24.8547, -32.8289, 10.7858, -38.7875, 8.03316, -39.7395, -2.81051, -42.7398, -5.48523, -43.2866, -13.4402, -44.4354, -16.0724, -44.6535, -23.9266, -44.8097, -26.5341, -44.6949, -34.3405, -43.8462, -36.9409, -43.3943, -44.7526, -41.5283, -47.3637, -40.7352, -55.2338, -37.8394, -57.8732, -36.701, -65.8548, -32.7629, -71.2398, -29.6992, -79.4353, -24.4408, -87.7991, -18.3811, -99.2639, -9.04259, -111.152, 1.74973, -129.931, 20.7004, -153.562, 47.0654, -214.319, 122.185, -216.506, 125, -219.664, 124.004, -299.214, 94.4125, -301.556, 93.3704, -344.889, 71.2163, -348.45, 69.0826, -370.732, 54.0533, -373.546, 51.8946, -386.274, 41.0653, -388.557, 38.8933, -396.831, 30.1892, -398.689, 28.0098, -405.3, 19.2826, -406.751, 17.0991, -410.629, 10.5465, -412.827, 6.1778, -414.72, 1.81, -416.315, -2.5558, -417.616, -6.91854, -418.629, -11.2772, -419.36, -15.6307, -419.814, -19.9779, -419.996, -24.3179, -419.912, -28.6495, -419.567, -32.9718, -418.967, -37.2836, -418.117, -41.584, -417.022, -45.8717, -415.688, -50.1459, -414.12, -54.4054, -410.306, -62.8761, -408.07, -67.0853, -402.967, -75.4459, -400.111, -79.5952, -392.126, -89.8697, -388.609, -93.9373, -377.018, -105.981, -370.672, -111.907, -354.562, -125.462, -342.041, -134.89, -320.485, -149.488, -297.359, -163.43, -266.771, -179.831, -231.725, -196.407, -189.615, -213.784, -148.168, -228.49, -108.874, -240.234, -78.4097, -247.644, -56.0535, -251.852, -42.6984, -253.678, -30.7532, -254.689, -23.6454, -254.895, -17.2727, -254.718, -14.3755, -254.482, -6.90592, -253.177, -2.99867, -251.797, -4.59227e-14, -250)
metadata/_edit_lock_ = true

[node name="CPT_Line" type="Line2D" parent="."]
visible = false
z_index = 2
material = SubResource("ShaderMaterial_gylnw")
position = Vector2(582, 320)
points = PackedVector2Array(1.53076e-14, -250, 2.91643, -249.024, 14.8525, -244.236, 17.8984, -242.825, 33.4432, -234.552, 39.7871, -230.701, 59.1332, -217.441, 68.9271, -209.92, 91.8821, -190.322, 104.948, -177.982, 133.768, -147.727, 149.196, -129.727, 175.372, -95.8617, 188.777, -76.5463, 208.107, -45.4346, 216.639, -29.9749, 229.481, -3.41858, 232.617, 3.99752, 240.468, 25.6195, 241.538, 29.117, 245.795, 46.065, 246.42, 49.3368, 248.129, 61.9846, 248.352, 65.0295, 248.517, 73.8613, 248.399, 76.6994, 247.511, 84.8767, 247.034, 87.4855, 245.799, 92.5189, 245.04, 94.9407, 242.181, 101.81, 239.78, 106.045, 236.971, 109.992, 233.747, 113.638, 230.097, 116.974, 228.11, 118.521, 226.013, 119.987, 223.805, 121.369, 219.053, 123.877, 216.506, 125, 213.819, 122.534, 27.7374, -31.3993, 24.8547, -32.8289, 10.7858, -38.7875, 8.03316, -39.7395, -2.81051, -42.7398, -5.48523, -43.2866, -13.4402, -44.4354, -16.0724, -44.6535, -23.9266, -44.8097, -26.5341, -44.6949, -34.3405, -43.8462, -36.9409, -43.3943, -44.7526, -41.5283, -47.3637, -40.7352, -55.2338, -37.8394, -57.8732, -36.701, -65.8548, -32.7629, -71.2398, -29.6992, -79.4353, -24.4408, -87.7991, -18.3811, -99.2639, -9.04259, -111.152, 1.74973, -129.931, 20.7004, -153.562, 47.0654, -214.319, 122.185, -216.506, 125, -219.664, 124.004, -299.214, 94.4125, -301.556, 93.3704, -344.889, 71.2163, -348.45, 69.0826, -370.732, 54.0533, -373.546, 51.8946, -386.274, 41.0653, -388.557, 38.8933, -396.831, 30.1892, -398.689, 28.0098, -405.3, 19.2826, -406.751, 17.0991, -410.629, 10.5465, -412.827, 6.1778, -414.72, 1.81, -416.315, -2.5558, -417.616, -6.91854, -418.629, -11.2772, -419.36, -15.6307, -419.814, -19.9779, -419.996, -24.3179, -419.912, -28.6495, -419.567, -32.9718, -418.967, -37.2836, -418.117, -41.584, -417.022, -45.8717, -415.688, -50.1459, -414.12, -54.4054, -410.306, -62.8761, -408.07, -67.0853, -402.967, -75.4459, -400.111, -79.5952, -392.126, -89.8697, -388.609, -93.9373, -377.018, -105.981, -370.672, -111.907, -354.562, -125.462, -342.041, -134.89, -320.485, -149.488, -297.359, -163.43, -266.771, -179.831, -231.725, -196.407, -189.615, -213.784, -148.168, -228.49, -108.874, -240.234, -78.4097, -247.644, -56.0535, -251.852, -42.6984, -253.678, -30.7532, -254.689, -23.6454, -254.895, -17.2727, -254.718, -14.3755, -254.482, -6.90592, -253.177, -2.99867, -251.797, -4.59227e-14, -250)
texture_mode = 1
metadata/_edit_lock_ = true

[node name="CPT_Light_Occluder" type="LightOccluder2D" parent="."]
visibility_layer = 0
position = Vector2(582, 320)
occluder = SubResource("OccluderPolygon2D_0yqsg")
metadata/_edit_lock_ = true

[node name="CPT_Collision_Polygon" type="CollisionPolygon2D" parent="."]
visible = false
position = Vector2(582, 320)
polygon = PackedVector2Array(1.53076e-14, -250, 2.91643, -249.024, 14.8525, -244.236, 17.8984, -242.825, 33.4432, -234.552, 39.7871, -230.701, 59.1332, -217.441, 68.9271, -209.92, 91.8821, -190.322, 104.948, -177.982, 133.768, -147.727, 149.196, -129.727, 175.372, -95.8617, 188.777, -76.5463, 208.107, -45.4346, 216.639, -29.9749, 229.481, -3.41858, 232.617, 3.99752, 240.468, 25.6195, 241.538, 29.117, 245.795, 46.065, 246.42, 49.3368, 248.129, 61.9846, 248.352, 65.0295, 248.517, 73.8613, 248.399, 76.6994, 247.511, 84.8767, 247.034, 87.4855, 245.799, 92.5189, 245.04, 94.9407, 242.181, 101.81, 239.78, 106.045, 236.971, 109.992, 233.747, 113.638, 230.097, 116.974, 228.11, 118.521, 226.013, 119.987, 223.805, 121.369, 219.053, 123.877, 216.506, 125, 213.819, 122.534, 27.7374, -31.3993, 24.8547, -32.8289, 10.7858, -38.7875, 8.03316, -39.7395, -2.81051, -42.7398, -5.48523, -43.2866, -13.4402, -44.4354, -16.0724, -44.6535, -23.9266, -44.8097, -26.5341, -44.6949, -34.3405, -43.8462, -36.9409, -43.3943, -44.7526, -41.5283, -47.3637, -40.7352, -55.2338, -37.8394, -57.8732, -36.701, -65.8548, -32.7629, -71.2398, -29.6992, -79.4353, -24.4408, -87.7991, -18.3811, -99.2639, -9.04259, -111.152, 1.74973, -129.931, 20.7004, -153.562, 47.0654, -214.319, 122.185, -216.506, 125, -219.664, 124.004, -299.214, 94.4125, -301.556, 93.3704, -344.889, 71.2163, -348.45, 69.0826, -370.732, 54.0533, -373.546, 51.8946, -386.274, 41.0653, -388.557, 38.8933, -396.831, 30.1892, -398.689, 28.0098, -405.3, 19.2826, -406.751, 17.0991, -410.629, 10.5465, -412.827, 6.1778, -414.72, 1.81, -416.315, -2.5558, -417.616, -6.91854, -418.629, -11.2772, -419.36, -15.6307, -419.814, -19.9779, -419.996, -24.3179, -419.912, -28.6495, -419.567, -32.9718, -418.967, -37.2836, -418.117, -41.584, -417.022, -45.8717, -415.688, -50.1459, -414.12, -54.4054, -410.306, -62.8761, -408.07, -67.0853, -402.967, -75.4459, -400.111, -79.5952, -392.126, -89.8697, -388.609, -93.9373, -377.018, -105.981, -370.672, -111.907, -354.562, -125.462, -342.041, -134.89, -320.485, -149.488, -297.359, -163.43, -266.771, -179.831, -231.725, -196.407, -189.615, -213.784, -148.168, -228.49, -108.874, -240.234, -78.4097, -247.644, -56.0535, -251.852, -42.6984, -253.678, -30.7532, -254.689, -23.6454, -254.895, -17.2727, -254.718, -14.3755, -254.482, -6.90592, -253.177, -2.99867, -251.797, -4.59227e-14, -250)
metadata/locked = true
metadata/_edit_lock_ = true
